# another-minecraft-copy-rust

./: Cargo.toml  README.md
src/: cube.rs  main.rs  shader.wgsl
