[package]
name = "webgpu2"
version = "0.1.0"
authors = ["jack xu"]
edition = "2021"

[dependencies]
wgpu = "24.0.3"
cgmath = "0.18"
env_logger = "0.11.7"
futures = "0.3"
gfx-hal = "0.9"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.4.0"
winit = "0.30.9"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.9.0"
